src/objects/Job_Category__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Category</label>
        <referenceTo>Job_Category__c</referenceTo>
        <relationshipLabel>Child Job Categories</relationshipLabel>
        <relationshipName>Child_Job_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Targeted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Targeted</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Category</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Parent_Category__c</columns>
        <columns>NAME</columns>
        <columns>External_ID__c</columns>
        <columns>Targeted__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>